--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main # 或 master，根据你的分支来
+      - main
 
 jobs:
   deploy:
@@ -18,14 +18,20 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install deps
+      - name: Configure Git
+        run: |
+          git config --global user.name "xms312"
+          git config --global user.email "2938754867@qq.com"
+
+      - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      - name: Build VitePress site
         run: npm run docs:build
 
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/.vitepress/dist
+          force_orphan: true
