--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 18
 
-      - name: Configure Git
+      - name: Setup Git identity
         run: |
           git config --global user.name "xms312"
           git config --global user.email "2938754867@qq.com"
@@ -26,8 +26,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build VitePress site
+      - name: Build site
         run: npm run docs:build
+
+      - name: Debug dist output
+        run: ls -la ./docs/.vitepress/dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
